Rename entity resources to links
