# daemon/restapi/openapi.yaml
@@ -52,7 +52,7 @@ paths:
 
   /html/groups/{groupType}/{groupSlug}:
     get:
-      summary: Return the list of resources for a group as HTML
+      summary: Return the list of links for a group as HTML
       parameters:
         - $ref: '#/components/parameters/GroupType'
         - $ref: '#/components/parameters/GroupSlug'
@@ -60,18 +60,18 @@ paths:
         '200':
           $ref: '#/components/responses/HtmlResponse'
 
-  /resources/with-groups:
+  /links/with-groups:
     post:
-      summary: Adds multiple resources, each with group info
+      summary: Adds multiple links, each with group info
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ResourcesWithGroups'
+              $ref: '#/components/schemas/LinksWithGroups'
       responses:
         '201':
-          description: The resources were created
+          description: The links were created
           content:
             application/json:
               schema:
@@ -100,71 +100,6 @@ paths:
         '503':
           description: Service Unavailable
 
-#  /groups:
-#    post:
-#      summary: Adds a new group
-#      description: >
-#        This endpoint when POSTed to adds a new group to the database.
-#        The response will simply be the database's `group.id` property.
-#      requestBody:
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              $ref: '#/components/schemas/Group'
-#      responses:
-#        '201':
-#          $ref: '#/components/responses/IdResponse'
-#        default:
-#          $ref: '#/components/responses/UnexpectedError'
-#
-#  /groups/{id}:
-#    parameters:
-#      - $ref: '#/components/parameters/IdParameter'
-#
-#    get:
-#      description: Returns a specific group
-#      responses:
-#        '200':
-#          description: A group object
-#          content:
-#            application/json:
-#              schema:
-#                $ref: '#/components/schemas/GroupWithId'
-#        default:
-#          $ref: '#/components/responses/UnexpectedError'
-#
-#    put:
-#      summary: Updates a specific group
-#      requestBody:
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              $ref: '#/components/schemas/GroupWithId'
-#      responses:
-#        '200':
-#          description: The group was updated
-#        default:
-#          $ref: '#/components/responses/UnexpectedError'
-#
-#    delete:
-#      summary: Deletes a specific group
-#      responses:
-#        '204':
-#          description: The group was deleted
-#        default:
-#          $ref: '#/components/responses/UnexpectedError'
-#
-#jsonSchemaDialect: https://spec.openapis.org/oas/3.1/dialect/base
-#security:
-#  -
-#servers:
-#  -
-#webhooks:
-#externalDocs:
-#tags:
-#  -
 components:
   parameters:
     TabGroupFilter:
@@ -300,9 +235,14 @@ components:
     Link:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
+          nullable: false
         url:
           type: string
           format: uri
+          nullable: false
         title:
           type: string
 
@@ -319,19 +259,10 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/IdObject'
-    Resource:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          nullable: false
-        url:
-          type: string
-          nullable: false
-    ResourceWithGroup:
+
+    LinkWithGroup:
       allOf:
-        - $ref: '#/components/schemas/Resource'
+        - $ref: '#/components/schemas/Link'
         - type: object
           properties:
             groupId:
@@ -344,10 +275,10 @@ components:
             groupType:
               type: string
               nullable: false
-    ResourcesWithGroups:
+    LinksWithGroups:
       type: array
       items:
-        $ref: '#/components/schemas/ResourceWithGroup'
+        $ref: '#/components/schemas/LinkWithGroup'
     Group:
       type: object
       properties:
@@ -379,3 +310,14 @@ components:
         message:
           type: string
           description: Error message
+
+#jsonSchemaDialect: https://spec.openapis.org/oas/3.1/dialect/base
+#security:
+#  -
+#servers:
+#  -
+#webhooks:
+#externalDocs:
+#tags:
+#  -
+
